# portal-transparencia-brasil-chatbot

./: .gitignore  README.md  start.sh
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: chat.py  health.py
backend/app/core/: __init__.py  exceptions.py  logging.py  middleware.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  agent_service.py  stream_service.py
backend/app/tools/: __init__.py  search.py  transparencia.py  transparencia_client.py
docs/: API_ENDPOINTS_STATUS.md  LINKS.md
frontend/: next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: page.tsx
frontend/components/: chat-input.tsx  chat-message.tsx  providers.tsx
frontend/components/chat/: chat-container.tsx  chat-tool.tsx
frontend/components/chat/tools/: README.md  index.ts  registry.ts
frontend/components/chat/tools/base/: api-types.ts  types.ts
frontend/components/chat/tools/consultar-acordo-leniencia-por-id/: index.ts  renderer.tsx  types.ts
frontend/components/chat/tools/consultar-acordos-leniencia/: index.ts  renderer.tsx  types.ts
frontend/components/chat/tools/consultar-auxilio-brasil-por-municipio/: index.ts  renderer.tsx  types.ts
frontend/components/chat/tools/consultar-ceaf-por-id/: index.ts  (+2 more)
frontend/components/ui/: accordion.tsx  button.tsx  code-block.tsx  markdown.tsx  select.tsx  textarea.tsx
frontend/hooks/: use-chat.ts  use-sse.ts
frontend/types/: index.ts
(+324 files in other folders)
